--- a/composer.json
+++ b/composer.json
@@ -14,18 +14,20 @@
 	},
 	"minimum-stability": "stable",
 	"require": {
-        "php": ">=5.4.0",
-        "yiisoft/yii2": ">=2.0.5",
-        "yiisoft/yii2-bootstrap": "^2.0",
-        "yiisoft/yii2-swiftmailer": "*",
-        "yiisoft/yii2-jui": "^2.0"
-    },
-    "require-dev": {
-        "yiisoft/yii2-codeception": "*",
-        "yiisoft/yii2-debug": "*",
-        "yiisoft/yii2-gii": "*",
-        "yiisoft/yii2-faker": "*"
-    },
+		"php": ">=5.4.0",
+		"yiisoft/yii2": ">=2.0.5",
+		"yiisoft/yii2-bootstrap": "^2.0",
+		"yiisoft/yii2-swiftmailer": "*",
+		"yiisoft/yii2-jui": "^2.0",
+		"loveorigami/yii2-notification-wrapper": "^6.7",
+		"bower-asset/jquery-toast-plugin": "^1.3"
+	},
+	"require-dev": {
+		"yiisoft/yii2-codeception": "*",
+		"yiisoft/yii2-debug": "*",
+		"yiisoft/yii2-gii": "*",
+		"yiisoft/yii2-faker": "*"
+	},
 	"config": {
 		"process-timeout": 1800,
 		"fxp-asset": {
